# aquifer-ai

./: .gitignore  Dockerfile.mcp  README.md  pyproject.toml
docs/: architecture.md  concepts.md  contributing.md  getting-started.md
infrastructure/: README.md  app.py
infrastructure/components/: ingestion.py  mcp_service.py  vector_store.py
internal-context-lake/: .dockerignore  .gitignore  LICENSE  LICENSE_TERMS.md
internal-context-lake/infrastructure/: aquifer_stack.py  cdk.json
internal-context-lake/infrastructure/components/: __init__.py  network.py
internal-context-lake/tests/: _fixtures_interceptors.py  test_chunking.py  test_github_connector.py  test_hooks.py  test_mcp_tools.py  test_opensearch.py
internal-context-lake/tests/eval_data/: 01_github_pr_redis_cache.json  02_github_pr_auth_breaking_change.json  03_github_issue_payment_timeout.json  05_github_pr_rate_limit_gateway.json  06_github_pr_destructive_migration.json  08_jira_task_notification_service.json
scripts/: eval_semantic_index.py
src/aquifer/: __init__.py
src/aquifer/connectors/: base.py
src/aquifer/core/: __init__.py  config.py  hooks.py  interfaces.py  models.py
src/aquifer/embedding/: __init__.py
src/aquifer/ingestion/: __init__.py  aws.py  pipeline.py
src/aquifer/mcp/: __init__.py  tools.py
tests/: test_bedrock.py  test_bedrock_inferencer.py  test_eval_harness.py  test_ingestion.py  test_mcp_reasoning_tools.py  test_models.py  test_semantic_engine.py  test_semantic_interceptor.py  test_semantic_prompts.py  test_worker_handler.py
tests/eval_data/: 04_github_readme_orders_service.json  07_jira_task_blocked_by_security.json
(+16 files in other folders)
