[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aquifer"
version = "0.1.0"
description = "Aquifer.ai — an open-source, in-VPC Context Lake with a standard MCP API for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSL-1.1" }
authors = [{ name = "Aquifer.ai" }]
keywords = ["context-lake", "mcp", "opensearch", "vector-search", "rag", "bedrock"]

# Lean runtime core. Heavy/optional deps live behind extras so Lambda and the
# Fargate MCP image can install only what they need.
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
]

[project.optional-dependencies]
# Adapters that talk to AWS / OpenSearch / GitHub.
aws = [
    "boto3>=1.34",
    "opensearch-py>=2.4",
    "requests-aws4auth>=1.2",
]
github = [
    "httpx>=0.27",
]
# The Fargate MCP server.
mcp = [
    "mcp>=1.2",
]
# Everything needed to run ingestion Lambdas locally / in the image.
ingestion = [
    "aquifer[aws,github]",
]
dev = [
    "aquifer[aws,github,mcp]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]
# CDK app dependencies (kept separate; installed in cdk/ only).
cdk = [
    "aws-cdk-lib>=2.140,<3",
    "constructs>=10.3,<11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aquifer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
